Terraform_Code/Modules/networking/vpc_default_sg.tf
resource "aws_security_group" "default" {
  description = "Default security group to allow inbound/outbound from the VPC"
  vpc_id = aws_vpc.vpc.id
  depends_on  = [aws_vpc.vpc]
  ingress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
    self = true
  }

  egress {
    from_port = "0"
    to_port = "0"
    protocol = "-1"
    self = "true"
  }
  tags = {
    Environment = var.environment
    Owner = var.owner
    CreatedDate = timestamp()
  }
}
